# Build tools

add_subdirectory(Autorun)
add_subdirectory(Babylon)
add_subdirectory(buildVersionUpdate)
add_subdirectory(Compress)
add_subdirectory(CRCDiff)
add_subdirectory(DebugWindow)
add_subdirectory(GUIEdit)
add_subdirectory(ImagePacker)
add_subdirectory(Launcher)
add_subdirectory(mangler)
add_subdirectory(ParticleEditor)
add_subdirectory(WorldBuilder)
