# Set source files
set(WORLDBUILDER_SRC
    "src/addplayerdialog.cpp"
    "src/AutoEdgeOutTool.cpp"
    "src/BaseBuildProps.cpp"
    "src/BlendEdgeTool.cpp"
    "src/BlendMaterial.cpp"
    "src/BorderTool.cpp"
    "src/brushoptions.cpp"
    "src/BrushTool.cpp"
    "src/BuildList.cpp"
    "src/BuildListTool.cpp"
    "src/CameraOptions.cpp"
    "src/CButtonShowColor.cpp"
    "src/CellWidth.cpp"
    "src/CFixTeamOwnerDialog.cpp"
    "src/ContourOptions.cpp"
    "src/CUndoable.cpp"
    "src/DrawObject.cpp"
    "src/EditAction.cpp"
    "src/EditCondition.cpp"
    "src/EditCoordParameter.cpp"
    "src/EditGroup.cpp"
    "src/EditObjectParameter.cpp"
    "src/EditParameter.cpp"
    "src/EulaDialog.cpp"
    "src/ExportScriptsOptions.cpp"
    "src/EyedropperTool.cpp"
    "src/FeatherOptions.cpp"
    "src/FeatherTool.cpp"
    "src/FenceOptions.cpp"
    "src/FenceTool.cpp"
    "src/FloodFillTool.cpp"
    "src/GlobalLightOptions.cpp"
    "src/GroveOptions.cpp"
    "src/GroveTool.cpp"
    "src/HandScrollTool.cpp"
    "src/ImpassableOptions.cpp"
    "src/LayersList.cpp"
    "src/LightOptions.cpp"
    "src/MainFrm.cpp"
    "src/mapobjectprops.cpp"
    "src/MapPreview.cpp"
    "src/MapSettings.cpp"
    "src/MeshMoldOptions.cpp"
    "src/MeshMoldTool.cpp"
    "src/MoundOptions.cpp"
    "src/MoundTool.cpp"
    "src/MyToolbar.cpp"
    "src/NewHeightMap.cpp"
    "src/ObjectOptions.cpp"
    "src/ObjectPreview.cpp"
    "src/ObjectTool.cpp"
    "src/OpenMap.cpp"
    "src/OptionsPanel.cpp"
    "src/PickUnitDialog.cpp"
    "src/playerlistdlg.cpp"
    "src/PointerTool.cpp"
    "src/PolygonTool.cpp"
    "src/propedit.cpp"
    "src/RampOptions.cpp"
    "src/RampTool.cpp"
    "src/RoadOptions.cpp"
    "src/RoadTool.cpp"
    "src/SaveMap.cpp"
    "src/ScorchOptions.cpp"
    "src/ScorchTool.cpp"
    "src/ScriptActionsFalse.cpp"
    "src/ScriptActionsTrue.cpp"
    "src/ScriptConditions.cpp"
    "src/ScriptDialog.cpp"
    "src/ScriptProperties.cpp"
    "src/SelectMacrotexture.cpp"
    "src/ShadowOptions.cpp"
    "src/SplashScreen.cpp"
    "src/StdAfx.cpp"
    "src/TeamBehavior.cpp"
    "src/TeamGeneric.cpp"
    "src/TeamIdentity.cpp"
    "src/TeamReinforcement.cpp"
    "src/teamsdialog.cpp"
    "src/TerrainMaterial.cpp"
    "src/TerrainModal.cpp"
    "src/TerrainSwatches.cpp"
    "src/TileTool.cpp"
    "src/Tool.cpp"
    "src/WaterOptions.cpp"
    "src/WaterTool.cpp"
    "src/WaypointOptions.cpp"
    "src/WaypointTool.cpp"
    "src/WBFrameWnd.cpp"
    "src/WBHeightMap.cpp"
    "src/WBPopupSlider.cpp"
    "src/wbview.cpp"
    "src/wbview3d.cpp"
    "src/WHeightMapEdit.cpp"
    "src/WorldBuilder.cpp"
    "src/WorldBuilderDoc.cpp"
    "src/WorldBuilderView.cpp"
    "include/addplayerdialog.h"
    "include/AutoEdgeOutTool.h"
    "include/BaseBuildProps.h"
    "include/BlendEdgeTool.h"
    "include/BlendMaterial.h"
    "include/BorderTool.h"
    "include/brushoptions.h"
    "include/BrushTool.h"
    "include/BuildList.h"
    "include/BuildListTool.h"
    "include/CameraOptions.h"
    "src/CButtonShowColor.h"
    "include/CellWidth.h"
    "include/CFixTeamOwnerDialog.h"
    "include/ContourOptions.h"
    "include/CUndoable.h"
    "include/DrawObject.h"
    "include/EditAction.h"
    "include/EditCondition.h"
    "include/EditCoordParameter.h"
    "include/EditGroup.h"
    "include/EditObjectParameter.h"
    "include/EditParameter.h"
    "include/euladialog.h"
    "include/ExportScriptsOptions.h"
    "include/EyedropperTool.h"
    "include/FeatherOptions.h"
    "include/FeatherTool.h"
    "include/FenceOptions.h"
    "include/FenceTool.h"
    "include/FloodFillTool.h"
    "include/GlobalLightOptions.h"
    "include/GroveOptions.h"
    "include/GroveTool.h"
    "include/HandScrollTool.h"
    "include/ImpassableOptions.h"
    "include/LayersList.h"
    "include/LightOptions.h"
    "include/MainFrm.h"
    "include/mapobjectprops.h"
    "include/MapPreview.h"
    "include/MapSettings.h"
    "include/MeshMoldOptions.h"
    "include/MeshMoldTool.h"
    "include/MoundOptions.h"
    "include/MoundTool.h"
    "include/MyToolbar.h"
    "include/NewHeightMap.h"
    "include/ObjectOptions.h"
    "include/ObjectPreview.h"
    "include/ObjectTool.h"
    "include/OpenMap.h"
    "include/OptionsPanel.h"
    "include/PickUnitDialog.h"
    "include/playerlistdlg.h"
    "include/PointerTool.h"
    "include/PolygonTool.h"
    "include/propedit.h"
    "include/RampOptions.h"
    "include/RampTool.h"
    "include/RoadOptions.h"
    "include/RoadTool.h"
    "include/SaveMap.h"
    "include/ScorchOptions.h"
    "include/ScorchTool.h"
    "include/ScriptActionsFalse.h"
    "include/ScriptActionsTrue.h"
    "include/ScriptConditions.h"
    "include/ScriptDialog.h"
    "include/ScriptProperties.h"
    "include/SelectMacrotexture.h"
    "include/ShadowOptions.h"
    "include/SplashScreen.h"
    "include/StdAfx.h"
    "include/TeamBehavior.h"
    "include/TeamGeneric.h"
    "include/TeamIdentity.h"
    "include/TeamReinforcement.h"
    "include/teamsdialog.h"
    "include/terrainmaterial.h"
    "include/TerrainModal.h"
    "include/TerrainSwatches.h"
    "include/TileTool.h"
    "include/Tool.h"
    "include/WaterOptions.h"
    "include/WaterTool.h"
    "include/WaypointOptions.h"
    "include/WaypointTool.h"
    "include/WBFrameWnd.h"
    "include/WBHeightMap.h"
    "include/wbview.h"
    "include/wbview3d.h"
    "include/WHeightMapEdit.h"
    "include/WorldBuilder.h"
    "include/WorldBuilderDoc.h"
    "include/WorldBuilderView.h"
)

# Targets to build.
add_executable(g_worldbuilder WIN32)

target_include_directories(g_worldbuilder PRIVATE
    .
    include
    res
)

target_compile_definitions(g_worldbuilder PRIVATE _AFXDLL)

target_link_libraries(g_worldbuilder PRIVATE
    d3d8lib
    dbghelplib
    g_browserdispatch
    g_gameengine
    g_gameenginedevice
    gi_gameengine_include
    gi_gameenginedevice_include
    gi_libraries_include
    imm32
    vfw32
    winmm
)

if(WIN32 OR "${CMAKE_SYSTEM}" MATCHES "Windows")
    target_link_options(g_worldbuilder PRIVATE /NODEFAULTLIB:libci.lib /NODEFAULTLIB:libc.lib)

    target_sources(g_worldbuilder PRIVATE res/WorldBuilder.rc)
    set_target_properties(g_worldbuilder PROPERTIES OUTPUT_NAME WorldBuilder)
else()
    set_target_properties(g_worldbuilder PROPERTIES OUTPUT_NAME worldbuilder)
endif()

target_sources(g_worldbuilder PRIVATE ${WORLDBUILDER_SRC})
